src/styles/components/_sidebar.scss
.sidebar {
    background-color: transparent;

}

.sidebar__sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 9999;
    top: 0;
    left: 0;
    background-color: $sidebarGreen;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
    font-size: 2.5rem;
    h1 {
        padding: 8px 8px 8px 32px;
        color: white;
        display: table-caption;
        transition: 0.3s;
        font-size: 1.5em;
    }
    a {
        padding: 8px 8px 8px 32px;
        text-decoration: none;
        color: $customPurple;
        display: block;
        transition: 0.3s;
        &:hover {
            color: #f1f1f1;
        }
    }
}

.sidenav__expand {
    @extend .sidebar__sidenav;
    width: 50vw;

    @include for-phone-only {
        h1 {
            margin-bottom: 50px;
        }
      }

    @include for-desktop-up {
        width: 30%;
    }
}

.sidebar-content {
    position: absolute;
    margin-top: auto;
    margin-bottom: auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    
    @include for-phone-only-landscape {
        transform: translate(-50%, -62%);
      }

      @include for-tablet-landscape-up {
          font-size: 4rem;
      }
}

.closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.spanStyle {
    font-size: 50px;
    color: $sidebarGreen;
    position: absolute;
    left: 2rem;
    cursor: pointer;
}

